# acm-ccs-2025

./: .gitignore  Cargo.toml  LICENSE  execute.sh  merge_benchmark_results.py  participant_config.toml
benchmarks/1ctxt/: delay_50ms_bw_no_n_16_k_64_m_1_b_8_party0.txt  delay_50ms_bw_no_n_16_k_64_m_1_b_8_party1.txt  delay_50ms_bw_no_n_16_k_64_m_1_b_8_party10.txt  delay_50ms_bw_no_n_16_k_64_m_1_b_8_party11.txt  delay_50ms_bw_no_n_16_k_64_m_1_b_8_party12.txt  delay_50ms_bw_no_n_16_k_64_m_1_b_8_party13.txt  delay_50ms_bw_no_n_16_k_64_m_1_b_8_party14.txt  delay_50ms_bw_no_n_16_k_64_m_1_b_8_party15.txt  delay_50ms_bw_no_n_16_k_64_m_1_b_8_party2.txt  delay_50ms_bw_no_n_16_k_64_m_1_b_8_party3.txt  delay_50ms_bw_no_n_16_k_64_m_1_b_8_party4.txt  delay_50ms_bw_no_n_16_k_64_m_1_b_8_party5.txt  delay_50ms_bw_no_n_16_k_64_m_1_b_8_party6.txt  delay_50ms_bw_no_n_16_k_64_m_1_b_8_party7.txt  delay_50ms_bw_no_n_16_k_64_m_1_b_8_party8.txt  delay_50ms_bw_no_n_16_k_64_m_1_b_8_party9.txt  delay_50ms_bw_no_n_4_k_64_m_1_b_8_party0.txt  delay_50ms_bw_no_n_4_k_64_m_1_b_8_party1.txt  delay_50ms_bw_no_n_4_k_64_m_1_b_8_party2.txt  delay_50ms_bw_no_n_4_k_64_m_1_b_8_party3.txt  delay_50ms_bw_no_n_8_k_64_m_1_b_8_party0.txt  delay_50ms_bw_no_n_8_k_64_m_1_b_8_party1.txt  delay_50ms_bw_no_n_8_k_64_m_1_b_8_party2.txt  delay_50ms_bw_no_n_8_k_64_m_1_b_8_party3.txt  delay_50ms_bw_no_n_8_k_64_m_1_b_8_party4.txt  delay_50ms_bw_no_n_8_k_64_m_1_b_8_party5.txt  delay_50ms_bw_no_n_8_k_64_m_1_b_8_party6.txt  delay_50ms_bw_no_n_8_k_64_m_1_b_8_party7.txt  delay_5ms_bw_no_n_16_k_64_m_1_b_8_party0.txt  (+27 more)
src/: lib.rs
(+186 files in other folders)
