[package]
name = "threshold-decryption"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
num-bigint = { version = "0.4.6", features = ["rand", "serde"]}
num-traits = "0.2.19"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
num-integer = "0.1.46"
bincode = "1.3.3"
message-io = {  version = "0.18.2", default-features = false, features = ["tcp", "udp"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
bitcode = { version = "0.6.3", features = ["serde", "derive"]}
log = "0.4"
env_logger = "0.11.5"
rayon = "1.10.0"
lazy_static = "1.5.0"
dashmap = "6.1.0"
toml = "0.8.19"
paste = "1.0.15"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "network"
path = "src/network/main.rs"

[[bin]]
name = "protocol"
path = "src/mpc/main.rs"

